Bug 837865 - Use DOMCursor instead of DeviceStorageCursor. r=bent